deploy/s0/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s0-staging
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
